roles/journalcheck/files/filters.txt
^CRON:
^ansible-[^:]*:
^cron:
^crontab:
^dbus: \[system\] Activating via systemd: service name='org\.freedesktop\.hostname1' unit='dbus-org\.freedesktop\.hostname1\.service'$
^dbus: \[system\] Successfully activated service 'org\.freedesktop\.hostname1'$
^dbus: \[system\] Successfully activated service 'org\.freedesktop\.systemd1'$
^dhclient: DHCPACK from
^dhclient: DHCPREQUEST on
^dhclient: bound to
^emacs:
^kbd: Setting console screen modes and fonts\.$
^networking: Configuring network interfaces\.\.\.Waiting for DAD\.\.\. Done$
^networking: done\.$
^nullmailer: Delivery complete, 0 message\(s\) remain\.$
^nullmailer: Rescanning queue\.$
^nullmailer: Sent file\.$
^nullmailer: Starting delivery, [0-9]+ message\(s\) in queue\.$
^nullmailer: Starting delivery:
^nullmailer: Starting mail-transfer-agent: nullmailer\.$
^nullmailer: Stopping mail-transfer-agent: nullmailer\.$
^nullmailer: Trigger pulled\.$
^nullmailer: smtp: Succeeded:
^smtpproxy: Client QUIT;
^smtpproxy: Client escaped tarpit;
^smtpproxy: Connection finished;
^smtpproxy: Error delivering mail;
^smtpproxy: Error during greeting;
^smtpproxy: Error reading client command;
^smtpproxy: Error reading mail data;
^smtpproxy: Error writing server greeting;
^smtpproxy: Error: Client spoke before its turn;
^smtpproxy: Error: DNSBL check positive;
^smtpproxy: Error: Relay access denied;
^smtpproxy: Error: Syntax error in MAIL command;
^smtpproxy: Error: Unknown command;
^smtpproxy: Mail sent;
^smtpproxy: New connection;
^smtpproxy: SMTP proxy started;
^sshd: Accepted keyboard-interactive/pam for
^sshd: Accepted password for
^sshd: Accepted publickey for
^sshd: Address [^ ]+ maps to [^ ]+, but this does not map back to the address - POSSIBLE BREAK-IN ATTEMPT!$
^sshd: Bad packet length [0-9]+\. \[preauth\]
^sshd: Bad protocol version identification
^sshd: Connection closed by
^sshd: Did not receive identification string from
^sshd: Disconnecting: Change of username or service not allowed:
^sshd: Disconnecting: Packet corrupt \[preauth\]
^sshd: Disconnecting: Too many authentication failures for admin from
^sshd: Disconnecting: Too many authentication failures for invalid user
^sshd: Disconnecting: bad client public DH value \[preauth\]
^sshd: Exiting on signal 15$
^sshd: Failed (none|password) for invalid user
^sshd: Failed keyboard-interactive/pam for invalid user
^sshd: Invalid user
^sshd: Invalid user [^ ]* from
^sshd: PAM 2 more authentication failures;
^sshd: Postponed keyboard-interactive for
^sshd: Postponed keyboard-interactive for invalid user
^sshd: Postponed keyboard-interactive/pam for
^sshd: Protocol major versions differ for
^sshd: Received SIGHUP; restarting\.$
^sshd: Received disconnect from
^sshd: Received signal 15; terminating\.$
^sshd: Server listening on 0.0.0.0 port 22\.$
^sshd: Server listening on :: port 22\.$
^sshd: User [^ ]+ from [^ ]+ not allowed because not listed in AllowUsers$
^sshd: error: PAM: Authentication failure for admin from
^sshd: error: PAM: Authentication failure for illegal user
^sshd: error: Received disconnect from
^sshd: error: connect_to localhost port [0-9]+ failed\.$
^sshd: fatal: Read from socket failed: Connection reset by peer \[preauth\]$
^sshd: fatal: Unable to negotiate a key exchange method \[preauth\]$
^sshd: fatal: Write failed: Connection reset by peer
^sshd: fatal: no hostkey alg
^sshd: fatal: no matching cipher found:
^sshd: input_userauth_request: invalid user
^sshd: invalid public DH value: <= 1 \[preauth\]
^sshd: pam_unix\(sshd:auth\): authentication failure;
^sshd: pam_unix\(sshd:auth\): check pass; user unknown
^sshd: pam_unix\(sshd:session\): session closed for user
^sshd: pam_unix\(sshd:session\): session opened for user
^sshd: syslogin_perform_logout: logout\(\) returned an error$
^su:
^su: Successful su for
^su: pam_unix\(su:session\): session closed for user
^su: pam_unix\(su:session\): session opened for user
^sudo: [^ ]+ : TTY=
^sudo: [^ ]+ : \(command continued\)
^sudo: pam_unix\(sudo:session\): session closed for user
^sudo: pam_unix\(sudo:session\): session opened for user
^systemd-journald.service: Time spent on flushing to
^systemd-journald\.service: Journal started$
^systemd-journald\.service: Permanent journal is using
^systemd: Reloading\.$
^systemd: Started
^systemd: Starting
^vzquota: /etc/init\.d/vzquota: 15: \[: 0: unexpected operator$
